softmax functions, context vectors and matrix multiplications

--- a/..md
+++ b/..md
@@ -395,6 +395,7 @@ print(context_vec_2)
 Next, we will generalize this procedure for computing context vectors to calculate all context vectors simultaneously.
 
 ## 3.3.2 Computing Attention weights for all input tokens
+#### Step 1
 So far, we calculated attention weigths and context vector for input 2 so we're doing it for each input now
 Modified code to compute all context vectors:
 
@@ -419,3 +420,37 @@ tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],
 [0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],
 [0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])
 ```
+Now, this process can be done faster by using matrix multiplications as for loops are generally slower in python
+```Python
+attn_scores = inputs @ inputs.T
+print(attn_scores)
+```
+Here, inputs.T means the transpose of inputs. 
+Doing so will result in the same results as using the for loop - except it's much faster
+
+### Step 2
+Here we'll normalize each row so that the values in each row sum to 1
+```Python
+attn_weights = torch.softmax(attn_scores, dim=-1)
+print(attn_weights)
+```
+This returns normalized attention weight tensors which when summed together will result in 1
+
+Quick concept, there can be two types of normalization. Normalization along the rows and normalization along the columns - So say in your softmax function, you have set your dimension = -1. This means all your attention weights will be normalized along a row - sum of one row will be equal to 1. However, if your dimension=1, the sum of one column will be equal to 1
+
+So here we use softmax with dimension -1 (row normalization). This will result in the sum of each row = 1
+```Python
+row_2_sum = sum([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])
+print("Row 2 sum:", row_2_sum)
+print("All row sums:", attn_weights.sum(dim=-1))
+```
+
+
+### Step 3
+In this final step, we use the normalized attention weights to compute all context vectors via matrix multiplication:
+```
+all_context_vecs = attn_weights @ inputs
+print(all_context_vecs)
+```
+This results in a 6x3 context vector (same dimensions as the original 'input')
+This concludes method#2 and the more efficient way of coding self attention mechanisms
