--- a/..md
+++ b/..md
@@ -467,4 +467,10 @@ all_context_vecs = attn_weights @ inputs
 print(all_context_vecs)
 ```
 This results in a 6x3 context vector (same dimensions as the original 'input')
-This concludes method#2 and the more efficient way of coding self attention mechanisms
+This concludes method#2 and the more efficient way of coding self attention mechanisms.
+
+## 3.4 Implementing Self-Attention with trainable weights
+Next step is to implement self attention used in the original transformer architecture, the GPT models, and most other popular LLMs. This self attention mechanism is also called _scaled dot-product attention_
+![Figure 3.13](md-assets/image5.png)
+
+### 3.4.1 Computing the attention weights step by step
