--- a/..md
+++ b/..md
@@ -474,3 +474,79 @@ Next step is to implement self attention used in the original transformer archit
 ![Figure 3.13](md-assets/image5.png)
 
 ### 3.4.1 Computing the attention weights step by step
+we're implementing the self attention mechanism step by step by introducing the three trainable weight matrices Wq, Wk ad Wv
+![Figure 3.14](md-assets/image6.png)
+
+Here we're taking the second input element (the word 'journey') which is represented by 3 vectors:
+```Python
+x_2 = inputs[1]
+d_in = inputs.shape[1]
+d_out = 2
+```
+
+Note that in GPT-like models, the input and output dimensions are usually the same,
+but to better follow the computation, we’ll use different input ( d_in=3) and output
+(d_out=2) dimensions here. (Why? because you take input dimensions, multiply with projection matrices Wq, Wk and Wv and you get a new representation. However to make the math more visible here, they used different dimensions - read more to find out more yo)
+
+We're going to now initialize three weight matrices of query, key and value:
+
+```Python
+torch.manual_seed(123)
+W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)
+W_key = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)
+W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)
+
+```
+
+You set requires_grad=False here to reduce clutter in the outputs, but if we were to use the weight matrices for model training, we would set it to true to update these matrices during model training
+
+```Python
+query_2 = x_2 @ W_query
+key_2 = x_2 @ W_key
+value_2 = x_2 @ W_value
+print(query_2)
+```
+
+The resulting matrix is 2-dimensional because that's the output dimension we set up above
+
+**Weight parameters vs. attention weights**
+In the weight matrices W, the term “weight” is short for “weight parameters,” the val-
+ues of a neural network that are optimized during training. This is not to be confused
+with the attention weights. As we already saw, attention weights determine the extent
+to which a context vector depends on the different parts of the input (i.e., to what
+extent the network focuses on different parts of the input).
+In summary, weight parameters are the fundamental, learned coefficients that define
+the network’s connections, while attention weights are dynamic, context-specific values.
+
+To calculate one context vector z(2), we still require the key and value vectors for all input elements as they are involved in computing the attention weights with respect to the query q(2)
+
+```Python
+keys = inputs @ W_key
+values = inputs @ W_value
+print("keys.shape:", keys.shape)
+print("values.shape:", values.shape)
+```
+
+the resulting shape here is `torch.Size([6, 2])` which really means 6 tokens and 2 dimensions of each. To visualize, it must loook like this `([x1, y1], [x2, y2]....[x6, y6])`
+We have now succesfully projected six input tokens from a 3-dimensional onto a 2-dimensional embedding space, now we'll compute attention scores:
+
+![Figure 3.15](md-assets/image7.png)
+
+Computing the attention score w22:
+
+```Python
+keys_2 = keys[1]
+attn_score_22 = query_2.dot(keys_2)
+print(attn_score_22)
+```
+
+The result for the unnormalized attention score is
+tensor(1.8524)
+
+Again, we can generalize this computation to all attention scores via matrix multiplication:
+```Python
+attn_scores_2 = query_2 @ keys.T
+print(attn_scores_2)
+```
+
+and then you get all attention scores of query 2 or whatever 
