--- a/..md
+++ b/..md
@@ -550,3 +550,6 @@ print(attn_scores_2)
 ```
 
 and then you get all attention scores of query 2 or whatever 
+
+Finally, you calculate attention weights from these attention scores and using the softmax function we'll normalize
+However when the values of dot product items are big, you might want to scale them by dividing by square root of embedding dimension of the keys - which is mathematically similar to exponentiating by 0.5
