--- a/..md
+++ b/..md
@@ -552,4 +552,30 @@ print(attn_scores_2)
 and then you get all attention scores of query 2 or whatever 
 
 Finally, you calculate attention weights from these attention scores and using the softmax function we'll normalize
-However when the values of dot product items are big, you might want to scale them by dividing by square root of embedding dimension of the keys - which is mathematically similar to exponentiating by 0.5
+However when the values of dot product items are big, you might want to scale them by dividing by square root of embedding dimension of the keys - which is mathematically similar to exponentiating by 0.5. The code goes as such;
+
+```python
+d_k = keys.shape[-1]
+attn_weights_2 = torch.softmax(attn_scores_2 / d_k**0.5, dim=-1)
+print(attn_weights_2)
+```
+
+Now that you've got attention scores w22 ish , you now will normalize them using softmax functions to obtain attention weights. Then finally after normalizing, you get context vectors (the goal here)
+
+**The rationale behind scaled-dot product attention**
+The reason for the normalization by the embedding dimension size is to improve the
+training performance by avoiding small gradients. For instance, when scaling up the
+embedding dimension, which is typically greater than 1,000 for GPT-like LLMs, large
+dot products can result in very small gradients during backpropagation due to the
+softmax function applied to them. As dot products increase, the softmax function
+behaves more like a step function, resulting in gradients nearing zero. These small
+gradients can drastically slow down learning or cause training to stagnate.
+The scaling by the square root of the embedding dimension is the reason why this
+self-attention mechanism is also called scaled-dot product attention.
+
+Similar to when we computed the context vector as a weighted sum over the input vec-
+tors (see section 3.3), we now compute the context vector as a weighted sum over the
+value vectors. I don't really yet understand what the differences between Wq, Wk and Wv really is but we'll get there
+you then do the matrix multiplication and you've got one context vector. idk man im re-reading this book anyway relax roha
+
+### 3.4.2 Implementing a compact self-attention python class
