--- a/..md
+++ b/..md
@@ -579,3 +579,41 @@ value vectors. I don't really yet understand what the differences between Wq, Wk
 you then do the matrix multiplication and you've got one context vector. idk man im re-reading this book anyway relax roha
 
 ### 3.4.2 Implementing a compact self-attention python class
+i'd be lying if i say i get it
+
+
+## 3.5 Hiding future words with causal attention
+For many LLM tasks, you will want the self-attention mechanism to consider only the
+tokens that appear prior to the current position when predicting the next token in a
+sequence. Causal attention, also known as masked attention, is a specialized form of self-
+attention. It restricts a model to only consider previous and current inputs in a sequence
+when processing any given token when computing attention scores. This is in contrast
+to the standard self-attention mechanism, which allows access to the entire input
+sequence at once.
+Now, we will modify the standard self-attention mechanism to create a causal
+attention mechanism, which is essential for developing an LLM in the subsequent
+chapters. To achieve this in GPT-like LLMs, for each token processed, we mask out
+the future tokens, which come after the current token in the input text
+
+### 3.5.1 Applying a causal attention mask
+- normalize attention scores to get attention weights
+- turn all above the diagonal into a mask with 0's
+- now normalize these such that each row must sum up to 1
+
+You mask out above the diagonal using pytorch's `tril` function so you get 1s and 0s matrices telling you where values can go (1) and where it should be empty(). Then you multiply by attention weights such that wherever there was 0 will remain zero
+Now you re-normalize the values. 
+and then whatver this means:
+
+**Information leakage**
+When we apply a mask and then renormalize the attention weights, it might initially
+appear that information from future tokens (which we intend to mask) could still influence the current token because their values are part of the softmax calculation. However, the key insight is that when we renormalize the attention weights after masking, what we’re essentially doing is recalculating the softmax over a smaller subset (since masked positions don’t contribute to the softmax value).
+The mathematical elegance of softmax is that despite initially including all positions in the denominator, after masking and renormalizing, the effect of the masked positions is nullified—they don’t contribute to the softmax score in any meaningful way. In simpler terms, after masking and renormalization, the distribution of attention weights is as if it was calculated only among the unmasked positions to begin with. This ensures there’s no information leakage from future (or otherwise masked) tokens as we intended.
+
+
+Now, we'll improve this whole thing. Instead of masking with 0, we'll mask with -inf.
+The softmax function converts its inputs into a probability distribution. When nega-
+tive infinity values (-∞) are present in a row, the softmax function treats them as zero probability. (Mathematically, this is because e –∞ approaches 0.)
+We can implement this more efficient masking “trick” by creating a mask with 1s
+above the diagonal and then replacing these 1s with negative infinity (-inf) values.
+
+You have masked self attention causal mechanisms more efficiently
