--- a/..md
+++ b/..md
@@ -617,3 +617,58 @@ We can implement this more efficient masking “trick” by creating a mask with
 above the diagonal and then replacing these 1s with negative infinity (-inf) values.
 
 You have masked self attention causal mechanisms more efficiently
+
+### 3.5.2 Masking additional attention weights with dropout
+Dropout in deep learning is a technique where randomly selected hidden layer units
+are ignored during training, effectively “dropping” them out. This method helps pre-
+vent overfitting by ensuring that a model does not become overly reliant on any spe-
+cific set of hidden layer units. It’s important to emphasize that dropout is only used
+during training and is disabled afterward.
+In the transformer architecture, including models like GPT, dropout in the atten-
+tion mechanism is typically applied at two specific times: after calculating the atten-
+tion weights or after applying the attention weights to the value vectors. Here we will
+apply the dropout mask after computing the attention weights, as illustrated in fig-
+ure 3.22, because it’s the more common variant in practice.
+In the following code example, we use a dropout rate of 50%, which means mask-
+ing out half of the attention weights. (When we train the GPT model in later chapters,
+we will use a lower dropout rate, such as 0.1 or 0.2.) We apply PyTorch’s dropout
+implementation first to a 6 × 6 tensor consisting of 1s for simplicity:
+
+```python
+torch.manual_seed(123)
+dropout = torch.nn.Dropout(0.5)
+example = torch.ones(6, 6)
+print(dropout(example))
+```
+
+### 3.5.3 Implementing a compact causal attention class
+We will now incorporate the causal attention and dropout modifications into the
+SelfAttention Python class we developed in section 3.4. This class will then serve as a
+template for developing multi-head attention, which is the final attention class we will
+implement.
+But before we begin, let’s ensure that the code can handle batches consisting of
+more than one input so that the CausalAttention class supports the batch outputs
+produced by the data loader we implemented in chapter 2*.
+
+`*For code see page 81`
+
+While all added code lines should be familiar at this point, we now added a self
+.register_buffer() call in the __init__ method. The use of register_buffer in
+PyTorch is not strictly necessary for all use cases but offers several advantages here. For
+instance, when we use the CausalAttention class in our LLM, buffers are automati-
+cally moved to the appropriate device (CPU or GPU) along with our model, which will
+be relevant when training our LLM. This means we don’t need to manually ensure
+these tensors are on the same device as your model parameters, avoiding device mis-
+match errors.
+
+Figure 3.23 summarizes what we have accomplished so far. We have focused on the
+concept and implementation of causal attention in neural networks. Next, we will
+expand on this concept and implement a multi-head attention module that imple-
+ments several causal attention mechanisms in parallel.
+
+![Figure 3.23](md-assets/image.png)
+
+## 3.6 Extending single-head attention to multi-head attention
+Previously we had one set of attention weights processing the input sequentially in causal attention.  Now we'll implement multi-head attention module by stacking multiple causal attention modules
+
+### 3.6.1 Stacking multiple single-head attention layers
