--- a/..md
+++ b/..md
@@ -666,9 +666,40 @@ concept and implementation of causal attention in neural networks. Next, we will
 expand on this concept and implement a multi-head attention module that imple-
 ments several causal attention mechanisms in parallel.
 
-![Figure 3.23](md-assets/image.png)
+![Figure 3.23](md-assets/image8.png)
 
 ## 3.6 Extending single-head attention to multi-head attention
 Previously we had one set of attention weights processing the input sequentially in causal attention.  Now we'll implement multi-head attention module by stacking multiple causal attention modules
 
 ### 3.6.1 Stacking multiple single-head attention layers
+The process goes similar to self causal attention except here you'll get a combined context vector Z that will be made by combining all other context vectors
+
+![Figure 3.24](md-assets/image9.png)
+
+Since multihead attention mechanism will concatenate all existing context vectors, the output dimension will be a multiplication of the provided d_out and the number of heads so if d_out =2 and num_heads=2 then d_out of concatenated context vector = 4
+
+`MultiHeadAttentionWrapper` code is at page 84 and onwards
+
+
+### 3.6.2 Implementing multi-head attention with weight splits
+Instead of calling selfattention class like previously, here you re-implement the whole `MultiHeadAttention` class
+
+`Full code at page 86`
+
+Even though the reshaping (.view) and transposing (.transpose) of tensors inside
+the MultiHeadAttention class looks very mathematically complicated, the Multi-
+HeadAttention class implements the same concept as the MultiHeadAttention-
+Wrapper earlier.
+On a big-picture level, in the previous MultiHeadAttentionWrapper, we stacked
+multiple single-head attention layers that we combined into a multi-head attention
+layer. The MultiHeadAttention class takes an integrated approach. It starts with a
+multi-head layer and then internally splits this layer into individual attention heads, as
+illustrated in figure 3.26.
+The splitting of the query, key, and value tensors is achieved through tensor reshap-
+ing and transposing operations using PyTorch’s .view and .transpose methods. The
+input is first transformed (via linear layers for queries, keys, and values) and then
+reshaped to represent multiple heads.
+The key operation is to split the d_out dimension into num_heads and head_dim,
+where head_dim = d_out / num_heads. This splitting is then achieved using the .view
+method: a tensor of dimensions (b, num_tokens, d_out) is reshaped to dimension
+(b, num_tokens, num_heads, head_dim).
