--- a/..md
+++ b/..md
@@ -510,11 +510,7 @@ print(query_2)
 The resulting matrix is 2-dimensional because that's the output dimension we set up above
 
 **Weight parameters vs. attention weights**
-In the weight matrices W, the term “weight” is short for “weight parameters,” the val-
-ues of a neural network that are optimized during training. This is not to be confused
-with the attention weights. As we already saw, attention weights determine the extent
-to which a context vector depends on the different parts of the input (i.e., to what
-extent the network focuses on different parts of the input).
+In the weight matrices W, the term “weight” is short for “weight parameters,” the values of a neural network that are optimized during training. This is not to be confused with the attention weights. As we already saw, attention weights determine the extent to which a context vector depends on the different parts of the input (i.e., to what extent the network focuses on different parts of the input).
 In summary, weight parameters are the fundamental, learned coefficients that define
 the network’s connections, while attention weights are dynamic, context-specific values.
 
@@ -703,3 +699,7 @@ The key operation is to split the d_out dimension into num_heads and head_dim,
 where head_dim = d_out / num_heads. This splitting is then achieved using the .view
 method: a tensor of dimensions (b, num_tokens, d_out) is reshaped to dimension
 (b, num_tokens, num_heads, head_dim).
+
+# Chapter 4
+## 4.1 Coding an LLM Architecture:
+Parameters are adjustable and trainable weights that get optimized during the training process
