updates on gradient and information loss

--- a/..md
+++ b/..md
@@ -703,3 +703,13 @@ method: a tensor of dimensions (b, num_tokens, d_out) is reshaped to dimension
 # Chapter 4
 ## 4.1 Coding an LLM Architecture:
 Parameters are adjustable and trainable weights that get optimized during the training process
+And you just build a class with a couple of dummy classes. The main class just initializes a vocab of stuff like total vocab, dropout_rate etc
+
+## 4.2 Normalizing activations with layer normalization
+Deep neural networks have many layers (thus the name 'deep') so when you're training a deep neural network such as an llm you're presented with a problem of the gradients being too small or too big
+
+--> Gradients are computed using chain rule, I may have forgotten what that is but I must not digress thus i'll read into it after this session so right now we're thinking of chain rule as a black box. This black box has many many multiplications - there's a very good chance that the result of these multiplications comes out to be very small or very large. 
+If these values are very small, the neural network wouldn't know how to update as the information is so small that it gets lost as it shrinks to 0
+If these values (gradients) are huge, the network changes very drastically. Instead of going towards the minimal loss it goes beyond it, then in the next round, gets lost again as it leaps back to its original state. Does that make sense? it made sense in my head before i wrote it but no worries, i'll connect the pieces coz im not your average joe
+
+Anyhoo, to avoid this "gradient information loss" or if we're being fancy (which we are) "vanishing/exploding gradients", we implement `layer normalization`
