--- a/..md
+++ b/..md
@@ -713,3 +713,19 @@ If these values are very small, the neural network wouldn't know how to update a
 If these values (gradients) are huge, the network changes very drastically. Instead of going towards the minimal loss it goes beyond it, then in the next round, gets lost again as it leaps back to its original state. Does that make sense? it made sense in my head before i wrote it but no worries, i'll connect the pieces coz im not your average joe
 
 Anyhoo, to avoid this "gradient information loss" or if we're being fancy (which we are) "vanishing/exploding gradients", we implement `layer normalization`
+
+Difference between partial and normal (total) derivatives : [Partial Derivative vs Total Derivative](https://youtu.be/Kp7sSp5Kn7o)
+And welp i did forget this but chain rule was just the derivation rule of take derivative of the like second input i hope im making sense (which im not) so here:
+[Chain Rule](https://youtu.be/0T0QrHO56qg)
+
+
+The main idea behind layer normalization is to adjust the activations (outputs) of a neural network layer to have a mean of 0 and a variance of 1 - aka unit variance
+
+
+`dim = 1` or `dim = -1` parameter defines the dimension along which the mean (or any other calculation) must take place. For example 1 or -1 means the mean is calculated across columns (or horizontally) and a dim of 0 means its calculated across rows (or vertically) like first item of each row
+
+Build a neural network with a linear layer on a randomized batch example (use torch.randn(2, 5)) followed by a relu layer. out = layer(batch). Find the mean and variance of this out. Then do the following: 
+
+```python
+out_norm = (out - mean) / torch.sqrt(var)
+```
