--- a/..md
+++ b/..md
@@ -729,3 +729,25 @@ Build a neural network with a linear layer on a randomized batch example (use to
 ```python
 out_norm = (out - mean) / torch.sqrt(var)
 ```
+
+now calculate and see the mean and variance of out_norm, you have near zero mean and a variance of 1. Turn the sci_mode to false and the mean will show as 0
+`torch.set_printoptions(sci_mode=False)`
+
+Updated class of layernormalization:
+
+```python
+class LayerNorm(nn.Module):
+    def __init__(self, emb_dim):
+        super().__init__()
+        self.eps = 1e-5
+        self.scale = nn.Parameter(torch.ones(emb_dim))
+        self.shift = nn.Parameter(torch.zeroes(emb_dim))
+        
+        
+    def forward(self, x):
+        mean = x.mean(dim=-1, keepdim=True)
+        var = x.var(dim=-1, keepdim=True, unbiased=False)
+        norm_x = (x - mean) / torch.sqrt(var + self.eps)
+        return self.scale * norm_x + self.shift
+```
+
