feed forward with gelu activations

--- a/..md
+++ b/..md
@@ -751,3 +751,12 @@ class LayerNorm(nn.Module):
         return self.scale * norm_x + self.shift
 ```
 
+eps is a small number to avoid zero division like you add it to ensure you dont end up dividing by zero during calculations and since it's a really small number its effects on the calculations are negligible
+
+## 4.3 Implementing a feed forward network with GELU activations
+two more activations functions 
+- GELU (Gaussian error linear unit)
+- SwiGLU (Swish-gated linear unit)
+
+This is the GELU activation function:
+![alt text](md-assets/image10.png)
