--- a/..md
+++ b/..md
@@ -760,3 +760,14 @@ two more activations functions
 
 This is the GELU activation function:
 ![alt text](md-assets/image10.png)
+
+You'll just have to implement a class with two functions, one of them being a constructor (which initializes super class as gelu will be inherited from nn.Module) and another being feedforward that takes in one parameter x and follows the function given above implemented in python which would go like this:
+```python
+    def forward(self, x):
+        return 0.5 * x * (1 + torch.tanh(
+            torch.sqrt(torch.tensor(2.0 / torch.pi) *
+                       (x + 0.044715 * torch.pow(x, 3)))
+        ))
+```
+
+![alt text](md-assets/image11.png)
