--- a/..md
+++ b/..md
@@ -771,3 +771,8 @@ You'll just have to implement a class with two functions, one of them being a co
 ```
 
 ![alt text](md-assets/image11.png)
+
+## 4.4 Adding shortcut connections:
+A shortcut connection was originally introduced to minimize diminishing/vanishing gradients. During backprop, the gradients get smaller and smaller as they travel through the neural network so to solve this, there is a technique called shortcut connecctions and all it does it skip through layers. It adds the output of layer 1 with output of layer 2 for example - that way it preserves loss information without getting lost (pun intended)
+
+![Figure 4.12](md-assets/image12.png)
