--- a/..md
+++ b/..md
@@ -778,3 +778,38 @@ A shortcut connection was originally introduced to minimize diminishing/vanishin
 ![Figure 4.12](md-assets/image12.png)
 
 ## 4.5 Connecting attention and linear layers in a transformer block
+You just take all the existing blocks and code the transformer model as such :
+```python
+class TransformerBlock(nn.Module):
+    def __init__(self, cfg):
+        super().__init__()
+        self.att = MultiHeadAttention(
+            d_in = cfg["embd_dim"],
+            d_out = cfg["embd_dim"],
+            context_length = cfg["context_length"],
+            num_heads = cfg["n_heads"],
+            dropout = cfg["drop_rate"],
+            qkv_bias = cfg["qkv_bias"])
+        self.ff = FeedForward(cfg)
+        self.norm1 = LayerNorm(cfg["embd_dim"])
+        self.norm2 = LayerNorm(cfg["embd_dim"])
+        self.drop_shortcut = nn.Dropout(cfg["drop_rate"])
+        
+        
+    def forward(self, x):
+        shortcut = x
+        x = self.norm1(x)
+        x = self.att(x)
+        x = self.drop_shortcut(x)
+        x = x + shortcut
+        
+        shortcut = x
+        x = self.ff(x)
+        x = self.drop_shortcut(x)
+        x = x + shortcut
+        return x
+```
+
+Full code at pg 115-116
+
+## 4.6 Coding the GPT model
