--- a/..md
+++ b/..md
@@ -813,3 +813,5 @@ class TransformerBlock(nn.Module):
 Full code at pg 115-116
 
 ## 4.6 Coding the GPT model
+This is now the entire GPT model architecture as shown here:
+![alt text](md-assets/image13.png)
