--- a/..md
+++ b/..md
@@ -815,3 +815,7 @@ Full code at pg 115-116
 ## 4.6 Coding the GPT model
 This is now the entire GPT model architecture as shown here:
 ![alt text](md-assets/image13.png)
+
+## 4.7 Generating Text
+![Figure 4.17](md-assetss/image14.png)
+
