--- a/..md
+++ b/..md
@@ -819,3 +819,15 @@ This is now the entire GPT model architecture as shown here:
 ## 4.7 Generating Text
 ![Figure 4.17](md-assetss/image14.png)
 
+# Chapter 5
+## 5.1 Evaluating generative text models
+an LLM training function consists of 3 parts
+1) Text generation
+2) Text evaluation
+3) Training & validation losses
+
+### 5.1.1 Using GPT to generate text
+using the code implemented previously in chapter 4 and chapter 3, you just create one last method to convert token ids to text- thats about it and regenerate some content. which not so surprisingly is gibberish as we havent trained the model yet - remember?? lol
+anyway so before we train the model, you need to have some sort of a numerical method to evaluate the generated content
+
+### 5.1.2 Calculating the text generation loss
