--- a/src/chp05.ipynb
+++ b/src/chp05.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 118,
    "id": "5b698328",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,19 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "id": "8c505f04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input text: Every effort moves you\n",
-      "Output text: Every effort moves you rentingetic wasnم refres RexMeCHicular stren\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tiktoken\n",
     "from GPT import generate_text_simple\n",
@@ -310,19 +301,287 @@
     "    flat = token_ids.squeeze(0)\n",
     "    return tokenizer.decode(flat.tolist())\n",
     "\n",
-    "start_context = \"Every effort moves you\"\n",
+    "# start_context = \"Every effort moves you\"\n",
     "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
     "\n",
-    "token_ids = generate_text_simple(\n",
-    "    model=model,\n",
-    "    idx=text_to_token_ids(start_context, tokenizer),\n",
-    "    max_new_tokens=10,\n",
-    "    context_size=GPT_CONFIG_124M[\"context_length\"]\n",
-    ")\n",
+    "# token_ids = generate_text_simple(\n",
+    "#     model=model,\n",
+    "#     idx=text_to_token_ids(start_context, tokenizer),\n",
+    "#     max_new_tokens=10,\n",
+    "#     context_size=GPT_CONFIG_124M[\"context_length\"]\n",
+    "# )\n",
     "\n",
-    "print(\"Input text:\", start_context )\n",
-    "print(\"Output text:\", token_ids_to_text(token_ids, tokenizer))"
+    "# print(\"Input text:\", start_context )\n",
+    "# print(\"Output text:\", token_ids_to_text(token_ids, tokenizer))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "587558ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# converting input to tokens\n",
+    "targets = torch.tensor([[3626, 6100, 345],\n",
+    "                        [1107, 588, 11311]])\n",
+    "\n",
+    "print(targets.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "09b5c636",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 50257])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    logits = model(targets)\n",
+    "probas = torch.softmax(logits, dim=-1)\n",
+    "print(probas.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "248319e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token IDs:\n",
+      " tensor([[[16835],\n",
+      "         [44376],\n",
+      "         [44148]],\n",
+      "\n",
+      "        [[16657],\n",
+      "         [ 1641],\n",
+      "         [40930]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "token_ids = torch.argmax(probas, dim=-1, keepdim=True)\n",
+    "print(\"Token IDs:\\n\", token_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "47a981cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Targets batch 1:  effort moves you\n",
+      "Outputs batch 1:  Train inactionProxy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Targets batch 1: {token_ids_to_text(targets[0], tokenizer)}\")\n",
+    "print(f\"Outputs batch 1: {token_ids_to_text(token_ids[0].flatten(), tokenizer)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "99ab0aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text 1:  tensor([3.5706e-05, 1.5782e-05, 8.1219e-06])\n",
+      "Text 2: tensor([1.2870e-05, 3.2012e-05, 6.1263e-06])\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_idx = 0\n",
+    "target_probas_1 = probas[text_idx, [0, 1, 2], targets[text_idx]]\n",
+    "print(\"Text 1: \", target_probas_1)\n",
+    "\n",
+    "text_idx = 1\n",
+    "target_probas_2 = probas[text_idx, [0, 1, 2], targets[text_idx]]\n",
+    "print(\"Text 2:\", target_probas_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "23d2d5fc",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-10.2402, -11.0567, -11.7209, -11.2606, -10.3494, -12.0029])\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_probas = torch.log(torch.cat((target_probas_1, target_probas_2)))\n",
+    "\n",
+    "print(log_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "86f1772c",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average log probas:  tensor(-11.1051)\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_log_probas = torch.mean(log_probas)\n",
+    "print(\"Average log probas: \", avg_log_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "fd8016c4",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(11.1051)\n"
+     ]
+    }
+   ],
+   "source": [
+    "neg_avg_log_probas = avg_log_probas * -1 \n",
+    "print(neg_avg_log_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "ccf03997",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits shape torch.Size([2, 3, 50257])\n",
+      "targets shape torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"logits shape\", logits.shape)\n",
+    "print(\"targets shape\", targets.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "626fb135",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flattened logits: torch.Size([6, 50257])\n",
+      "Flattened targets: torch.Size([6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "logits_flat = logits.flatten(0, 1)\n",
+    "targets_flat = targets.flatten()\n",
+    "print(\"Flattened logits:\", logits_flat.shape)\n",
+    "print(\"Flattened targets:\", targets_flat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "8a452a0b",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(11.1051)\n",
+      "tensor(66510.8672)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = torch.nn.functional.cross_entropy(logits_flat, targets_flat)\n",
+    "print(loss)\n",
+    "perplexity = torch.exp(loss)\n",
+    "print(perplexity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914d3b43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
