--- a/src/chp05.ipynb
+++ b/src/chp05.ipynb
@@ -11,10 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "id": "5b698328",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded:  [15496, 11, 314, 716]\n",
+      "encoded_tensor.shape:  torch.Size([1, 4])\n",
+      "Output: tensor([[15496,    11,   314,   716, 22181,  8723, 35067, 12620, 11495,  7337]])\n",
+      "Output length: 10\n",
+      "Hello, I amitationalperorNull Adams snap 400\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -257,7 +268,7 @@
        ")"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "id": "8c505f04",
    "metadata": {},
    "outputs": [],
@@ -317,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "id": "587558ec",
    "metadata": {},
    "outputs": [
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "id": "09b5c636",
    "metadata": {},
    "outputs": [
@@ -360,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "id": "248319e1",
    "metadata": {},
    "outputs": [
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "47a981cb",
    "metadata": {},
    "outputs": [
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "id": "99ab0aa9",
    "metadata": {},
    "outputs": [
@@ -431,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "id": "23d2d5fc",
    "metadata": {
     "vscode": {
@@ -455,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "id": "86f1772c",
    "metadata": {
     "vscode": {
@@ -478,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "id": "fd8016c4",
    "metadata": {
     "vscode": {
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "id": "ccf03997",
    "metadata": {
     "vscode": {
@@ -525,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "id": "626fb135",
    "metadata": {
     "vscode": {
@@ -551,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "id": "8a452a0b",
    "metadata": {
     "vscode": {
@@ -576,12 +587,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62278fcf",
+   "metadata": {},
+   "source": [
+    "## Training with the text : the verdict and evaluating losses\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "914d3b43",
+   "execution_count": 16,
+   "id": "95133e54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Characters: 20479\n",
+      "Tokens: 5145\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = '../the-verdict.txt'\n",
+    "\n",
+    "with open(file_path, 'r') as file:\n",
+    "    text_data = file.read()\n",
+    "    \n",
+    "total_characters = len(text_data)\n",
+    "total_tokens = len(tokenizer.encode(text_data))\n",
+    "\n",
+    "print(\"Characters:\", total_characters)\n",
+    "print(\"Tokens:\", total_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7ff5bd7a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_ratio = 0.90\n",
+    "split_idx = int(train_ratio * len(text_data))\n",
+    "train_data = text_data[:split_idx]\n",
+    "val_data = text_data[split_idx:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "80164306",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        # Tokenize the entire text\n",
+    "        token_ids = tokenizer.encode(txt, allowed_special={\"<|endoftext|>\"})\n",
+    "        assert len(token_ids) > max_length, \"Number of tokenized inputs must at least be equal to max_length+1\"\n",
+    "\n",
+    "        # Use a sliding window to chunk the book into overlapping sequences of max_length\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):\n",
+    "            input_chunk = token_ids[i:i + max_length]\n",
+    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.target_ids.append(torch.tensor(target_chunk))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.input_ids[idx], self.target_ids[idx]\n",
+    "    \n",
+    "\n",
+    "def create_dataloader_v1(txt, batch_size=4, max_length=256, \n",
+    "                         stride=128, shuffle=True, drop_last=True,\n",
+    "                         num_workers=0):\n",
+    "\n",
+    "    # Initialize the tokenizer\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "\n",
+    "    # Create dataset\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)\n",
+    "\n",
+    "    # Create dataloader\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=shuffle,\n",
+    "        drop_last=drop_last,\n",
+    "        num_workers=num_workers\n",
+    "    )\n",
+    "\n",
+    "    return dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "652b59ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "\n",
+    "train_loader = create_dataloader_v1(\n",
+    "    train_data,\n",
+    "    batch_size=2,\n",
+    "    max_length=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    stride = GPT_CONFIG_124M[\"context_length\"],\n",
+    "    drop_last=True,\n",
+    "    shuffle=True,\n",
+    "    num_workers=0\n",
+    ")\n",
+    "\n",
+    "val_loader = create_dataloader_v1(\n",
+    "    val_data,\n",
+    "    batch_size=2, \n",
+    "    max_length=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    stride = GPT_CONFIG_124M[\"context_length\"],\n",
+    "    drop_last=False,\n",
+    "    shuffle=False,\n",
+    "    num_workers=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e87b1e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loader: \n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n",
+      "\n",
+      "Validation loader: \n",
+      "torch.Size([2, 256]) torch.Size([2, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train loader: \")\n",
+    "for x,y in train_loader:\n",
+    "    print(x.shape, y.shape)\n",
+    "    \n",
+    "print(\"\\nValidation loader: \")\n",
+    "for x,y in val_loader:\n",
+    "    print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ca374660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_loss_batch(input_batch, target_batch, model, device):\n",
+    "    input_batch = input_batch.to(device)\n",
+    "    target_batch = target_batch.to(device)\n",
+    "    logits = model(input_batch)\n",
+    "    loss = torch.nn.functional.cross_entropy(\n",
+    "        logits.flatten(0, 1), target_batch.flatten()\n",
+    "    )\n",
+    "    \n",
+    "    return loss\n",
+    "\n",
+    "def calc_loss_loader(data_loader, model, device, num_batches=None):\n",
+    "    total_loss = 0\n",
+    "    if len(data_loader) == 0:\n",
+    "        return float(\"nan\")\n",
+    "    elif num_batches is None:\n",
+    "        num_batches = len(data_loader)\n",
+    "    else:\n",
+    "        num_batches = min(num_batches, len(data_loader))\n",
+    "    \n",
+    "    for i, (input_batch, target_batch) in enumerate(data_loader):\n",
+    "        if i < num_batches:\n",
+    "            loss = calc_loss_batch(\n",
+    "                input_batch, target_batch, model, device\n",
+    "            )\n",
+    "            total_loss += loss.item()\n",
+    "        else:\n",
+    "            break\n",
+    "    return total_loss / num_batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dcff2fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 10.987583372328016\n",
+      "Validation loss: 10.98110580444336\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "model.to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    train_loss = calc_loss_loader(train_loader, model, device)\n",
+    "    val_loss = calc_loss_loader(val_loader, model, device)\n",
+    "\n",
+    "print(\"Training loss:\", train_loss)\n",
+    "print(\"Validation loss:\", val_loss)"
+   ]
   }
  ],
  "metadata": {
